tests/NormalTests/paczka1/fuzzy1/43773875.err
Error in line 1: tCQeRd1aO S214 11,1
Error in line 3: 2leef7Rd S214 65,9
Error in line 10: 2leef7Rd A8 80,2
Error in line 13: A8 A47 62,2
Error in line 18: xMFY1cLFc1 A47 92,21
Error in line 19: MDV4cknX A466 -1,3
Error in line 7: xMFY1cLFc1 A47 86,1
Error in line 21: A8 A8 90,0
Error in line 12: KAaRJnd A466 89,1
Error in line 29: A8 A8 382,5
Error in line 30: tCQeRd1aO A47 35,2
Error in line 28: KAaRJnd S214 68,2
Error in line 33: A8 A466 98,2
Error in line 34: A8 A466 33,4
